# detail

./: CHANGELOG.md  CONTRIBUTING.md  CONTRIBUTING.rst  Makefile  README.md  README.rst  devops.py  environment.yml  footing.yaml  mkdocs.yml  pyproject.toml  settings.py  setup.cfg  temple.yaml  tox.ini
.circleci/: config.yml
.detail/: log.tpl  schema.yaml
.detail/notes/: 2022-03-21-67c3d1.yaml  2022-03-21-f78c2f.yaml
detail/: __init__.py  cli.py  core.py  exceptions.py  github.py  utils.py  version.py
detail/tests/: test_cli.py  test_core.py  test_github.py  test_integration.py  test_utils.py  test_version.py
docs/: Makefile  cli.rst  conf.py  contributing.md  index.md  index.rst  installation.md  installation.rst  package.md  package.rst  release_notes.md  requirements.txt  tutorial.md  tutorial.rst
