[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.coverage.run]
branch = true
source = ["detail"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise AssertionError",
    "raise NotImplementedError",
    "pass",
    "pytest.mark.skip",
    "@(typing\\.)?overload",
]
show_missing = true
fail_under = 100

[tool.poetry]
name = "detail"
packages = [
  { include = "detail" },
]
version = "0.2.3"
description = "Build automations off of structured notes in your project"
authors = ["Opus 10 Engineering"]
classifiers = [
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3 :: Only",
]
license = "BSD-3-Clause"
readme = "README.md"
homepage = "https://github.com/Opus10/detail"
repository = "https://github.com/Opus10/detail"
documentation = "https://detail.readthedocs.io"

[tool.poetry.dependencies]
python = ">=3.8.0,<4"
click = ">=7.0"
click-default-group = ">=1.2.2"
formaldict = ">=0.2.0"
jinja2 = ">=2.10.3"
python-dateutil = ">=2.8.1"
pyyaml = ">=5.1.2,<=5.3.1"
requests = ">=2.22.0"

[tool.poetry.dev-dependencies]
git-tidy = "1.2.0"
pytest = "7.4.2"
pytest-cov = "4.1.0"
pytest-dotenv = "0.5.2"
pytest-mock = "3.7.0"
pytest-responses = "0.5.1"
tox = "4.11.3"
ruff = "0.3.7"
pyright = "1.1.358"
mkdocs = "1.5.3"
black = "24.4.0"
mkdocs-material = "9.5.18"
mkdocstrings-python = "1.9.2"
footing = "*"
setuptools = "*"
poetry-core = "*"

[tool.poetry.scripts]
detail = 'detail.cli:main'

[tool.pytest.ini_options]
xfail_strict = true
testpaths = "detail/tests"
norecursedirs = ".venv"

[tool.ruff]
lint.select = ["E", "F", "B", "I", "G", "C4"]
line-length = 99
target-version = "py38"

[tool.pyright]
exclude = [
    "**/node_modules",
    "**/__pycache__",
    "src/experimental",
    "src/typestubs",
    "**/migrations/**",
    "**/tests/**",
]
pythonVersion = "3.8"
typeCheckingMode = "standard"
